# EvGOP

./: CMakeLists.txt  README.md  main.cpp
src/deck/: deck.cpp  deck.h
src/deck/cards/: assorbimento.cpp  assorbimento.h  card.cpp  card.h  cataclisma.cpp  cataclisma.h  controAssorbimento.cpp  controAssorbimento.h  dimezzaEnergiaCasella.cpp  dimezzaEnergiaCasella.h  lanciaDado.cpp  lanciaDado.h  swiftGain.cpp  swiftGain.h  tornaIndietro.cpp  tornaIndietro.h
src/game/: game.cpp  game.h
src/player/: player.cpp  player.h
src/tab/: boss.cpp  boss.h  box.cpp  box.h  changePosition.cpp  changePosition.h  enemy.cpp  enemy.h  start.cpp  start.h  teleportation.cpp  teleportation.h  vuota.cpp  vuota.h
